Swatch color updates. Gallery tab text wrapping fix.

--- a/src/packages/common/css/_base/_swatches.scss
+++ b/src/packages/common/css/_base/_swatches.scss
@@ -194,19 +194,20 @@
 }
 
 // These colors all need to be updated since colors have been standardized.
-.swatch-black     { background-color: $gray05; }
+.swatch-black     { background-color: $swatchBlack; }
+.swatch-white     { background-color: $swatchWhite; }
+.swatch-red       { background-color: $swatchRed; }
+.swatch-blue      { background-color: $swatchBlue; }
+.swatch-pink      { background-color: $swatchPink; }
+.swatch-green     { background-color: $swatchGreen; }
+.swatch-orange    { background-color: $swatchOrange; }
+.swatch-silver    { background-color: $swatchSilver; }
+.swatch-lemon     { background-color: $swatchLemon; }
+
+// These don't have official colors yet
 .swatch-yellow    { background-color: $secondaryGold; }
 .swatch-purple    { background-color: $themePurple; }
 .swatch-teal      { background-color: $themeBlueLight; }
-.swatch-white     { background-color: $white; }
-.swatch-red       { background-color: $themeRed; }
-.swatch-blue      { background-color: $themeBlueDark; }
-.swatch-pink      { background-color: $swatchPink; }
-.swatch-green     { background-color: $swatchGreen; }
-.swatch-orange    { background-color: $themeOrange; }
-.swatch-silver    { background-color: $gray60; }
-.swatch-lemon     { background-color: $swatchLemon; }
-
 
 // Mini swatches
 .color-swatches > .mini-swatch:not(:last-child) {
