--- a/src/packages/modules/gallery-g2-g3/css/_responsive-gallery-g2-g3.scss
+++ b/src/packages/modules/gallery-g2-g3/css/_responsive-gallery-g2-g3.scss
@@ -451,6 +451,10 @@ $galleryFourColMax: px-em(979px);
       }
     }
 
+    .ghost-center {
+      padding: 0 2px;
+    }
+
     .holder-for-icon {
       height: 20px;
       margin-bottom: $iconMarginBottom;
