--- a/src/packages/modules/gallery-g2-g3/css/gallery-g2-g3.scss
+++ b/src/packages/modules/gallery-g2-g3/css/gallery-g2-g3.scss
@@ -601,6 +601,11 @@ $gifHeight: 60px;
     }
   }
 
+  .ghost-center {
+    width: 100%;
+    padding: 0 8px;
+  }
+
   // Has to be pixels because of ghost-centering
   .holder-for-icon {
     height: 28px;
@@ -613,7 +618,6 @@ $gifHeight: 60px;
   }
 
   .tab-label {
-    white-space: nowrap;
     margin-bottom: 0;
     line-height: 1;
   }
@@ -821,7 +825,7 @@ $stickyHeaderHeight: px-em(82);
   }
 
   .detail.highlighted {
-    background: $lemon;
+    background: $swatchLemon;
 
     .p3 {
       color: $gray20;
